--- a/guides.html
+++ b/guides.html
@@ -287,6 +287,8 @@
     </header>
 
     <main>
+        <script async="async" data-cfasync="false" src="https://pl28382333.effectivegatecpm.com/6734547bd00814827e11d0359b2f8ac6/invoke.js"></script>
+        <div id="container-6734547bd00814827e11d0359b2f8ac6"></div>
         <!-- Guides Hero -->
         <section class="guides-hero">
             <div class="container">
