--- a/media.html
+++ b/media.html
@@ -451,8 +451,8 @@
     </header>
 
     <main>
-        <script async="async" data-cfasync="false" src="//pl28136434.effectivegatecpm.com/e946f08f3aed55e5425fe4ac5eb0477b/invoke.js"></script>
-        <div id="container-e946f08f3aed55e5425fe4ac5eb0477b"></div>
+        <script async="async" data-cfasync="false" src="https://pl28382333.effectivegatecpm.com/6734547bd00814827e11d0359b2f8ac6/invoke.js"></script>
+<div id="container-6734547bd00814827e11d0359b2f8ac6"></div>
         <!-- Media Hero -->
         <section class="media-hero">
             <div class="container">
